--- a/come_in_acc.html
+++ b/come_in_acc.html
@@ -12,13 +12,15 @@
     <div class="come_in_acc">
         <h1>Войти в аккаунт</h1>
         <form name="come_in_acc_form">
-            <input class="email" type="email" name="email" placeholder="Почта">
-            <input class="password" type="password" name="password" placeholder="Пароль">
-            <button type="submit">Продолжить</button>
+            <input autocomplete="on" class="email" type="email" name="email" placeholder="Почта">
+            <input autocomplete="on" class="password" type="password" name="password" placeholder="Пароль">
+            <button>Продолжить</button>
         </form>
         <p>
             <a href="registr.html">Регистрация</a>
         </p>
     </div>
+
+    <script src="come_in_acc/come_in_acc.js"></script>
 </body>
 </html>
