--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <section>
-            <header>
+            <!-- <header>
                 <nav class="h_left">
                     <a href="#">Главная</a>
                     <a href="#">Мои кошельки</a>
@@ -21,7 +21,7 @@
                     <p class="user_email"></p>
                     <button><img src="./imgs/log-out (1) 1.svg" alt=""></button>
                 </div>
-            </header>
+            </header> -->
         </section>
         <main>
             <div class="title">
@@ -59,7 +59,8 @@
         </main>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="header.js"></script>
+    <script type="module" src="script.js"></script>
 </body>
 
 </html>
