--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <p>Visa</p>
                     <span class="currency">RUB</span>
                 </div>
-                <a href="#">Смотреть все кошельки</a>
+                <a href="all_wallets.html">Смотреть все кошельки</a>
             </div>
             <div class="transactions">
                 <h2>Последние транзакции</h2>
