--- a/registr.html
+++ b/registr.html
@@ -13,14 +13,14 @@
     <div class="registration">
         <h1>Регистрация</h1>
         <form name="reg_form">
-            <input class="email" type="email" name="email" placeholder="Почта">
-            <input class="name" type="text" name="name" placeholder="Имя">
-            <input class="surname" type="text" name="surname" placeholder="Фамилия">
-            <input class="password" type="password" name="password" placeholder="Пароль">
+            <input autocomplete="on" class="email" type="email" name="email" placeholder="Почта">
+            <input autocomplete="on" class="name" type="text" name="name" placeholder="Имя">
+            <input autocomplete="on" class="surname" type="text" name="surname" placeholder="Фамилия">
+            <input autocomplete="on" class="password" type="password" name="password" placeholder="Пароль">
             <button type="submit">Продолжить</button>
         </form>
         <p>
-            <a href="./come_in_acc.html">Войти в аккаунт</a>
+            <a href="./sign_in_acc.html">Войти в аккаунт</a>
         </p>
     </div>
 
