--- a/sign_in_acc.html
+++ b/sign_in_acc.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Merienda&family=PT+Sans&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/come_in_acc.css">
+    <title>Document</title> 
+    <link rel="stylesheet" href="css/sign_in_acc.css">
 </head>
 <body>
 
@@ -14,13 +13,13 @@
         <form name="come_in_acc_form">
             <input autocomplete="on" class="email" type="email" name="email" placeholder="Почта">
             <input autocomplete="on" class="password" type="password" name="password" placeholder="Пароль">
-            <button>Продолжить</button>
+            <button type="submit">Продолжить</button>
         </form>
         <p>
-            <a href="registr.html">Регистрация</a>
+            <a href="./registr.html">Регистрация</a>
         </p>
     </div>
 
-    <script src="come_in_acc/come_in_acc.js"></script>
+    <script src="sign_in_acc/sign_in_acc.js"></script>
 </body>
 </html>
