--- a/registr.html
+++ b/registr.html
@@ -24,6 +24,7 @@
         </p>
     </div>
 
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="registr/registr.js"></script>
 </body>
 
