--- a/index.html
+++ b/index.html
@@ -5,24 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- <script src="./modules/guardian.js"></script> -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <div class="container">
-        <section>
-            <!-- <header>
-                <nav class="h_left">
-                    <a href="#">Главная</a>
-                    <a href="#">Мои кошельки</a>
-                    <a href="#">Мои транзакции</a>
-                </nav>
-                <div class="h_right">
-                    <p class="user_email"></p>
-                    <button><img src="./imgs/log-out (1) 1.svg" alt=""></button>
-                </div>
-            </header> -->
-        </section>
         <main>
             <div class="title">
                 <h1>Добро пожаловать, <span class="user_name"></span></h1>
@@ -30,9 +18,7 @@
             </div>
             <div class="my_wallets">
                 <h2>Мои кошельки</h2>
-                <div>
-                    <p>Visa</p>
-                    <span class="currency">RUB</span>
+                <div class="wallets">
                 </div>
                 <a href="all_wallets.html">Смотреть все кошельки</a>
             </div>
@@ -58,7 +44,7 @@
             </div>
         </main>
     </div>
-
+    
     <script type="module" src="header.js"></script>
     <script type="module" src="script.js"></script>
 </body>
