--- a/registr/registr.html
+++ b/registr/registr.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Merienda&family=PT+Sans&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/registr.css">
+    <link rel="stylesheet" href="/css/registr.css">
 </head>
 
 <body>
@@ -20,12 +20,12 @@
             <button type="submit">Продолжить</button>
         </form>
         <p>
-            <a href="./sign_in_acc.html">Войти в аккаунт</a>
+            <a href="/sign_in_acc/sign_in_acc.html">Войти в аккаунт</a>
         </p>
     </div>
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="registr/registr.js"></script>
+    <script src="./registr.js"></script>
 </body>
 
 </html>
