--- a/sign_in_acc/sign_in_acc.html
+++ b/sign_in_acc/sign_in_acc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title> 
-    <link rel="stylesheet" href="css/sign_in_acc.css">
+    <link rel="stylesheet" href="/css/sign_in_acc.css">
 </head>
 <body>
 
@@ -16,10 +16,10 @@
             <button type="submit">Продолжить</button>
         </form>
         <p>
-            <a href="./registr.html">Регистрация</a>
+            <a href="/registr/registr.html">Регистрация</a>
         </p>
     </div>
 
-    <script src="sign_in_acc/sign_in_acc.js"></script>
+    <script src="./sign_in_acc.js"></script>
 </body>
 </html>
