--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <div class="my_wallets">
                 <h2>Мои кошельки</h2>
                 <div class="wallets">
+                    
                 </div>
-                <a href="all_wallets.html">Смотреть все кошельки</a>
+                <a class="all_wallets" href="all_wallets.html">Смотреть все кошельки</a>
             </div>
             <div class="transactions">
                 <h2>Последние транзакции</h2>
@@ -45,6 +46,7 @@
         </main>
     </div>
     
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module" src="header.js"></script>
     <script type="module" src="script.js"></script>
 </body>
