--- a/add_wallets/add_wallets.html
+++ b/add_wallets/add_wallets.html
@@ -29,6 +29,9 @@
             <h1>Добавить кошелек</h1>
             <input class="type" type="text" name="type" id="" placeholder="Имя">
             <input class="currency" type="text" name="currency" id="" placeholder="Валюта">
+            <select name="currency" id="select">
+                <option value=""></option>
+            </select>
             <button type="submit" class="submit_btn add_btn">Добавить</button>
             <button type="button" class="close_add">Х</button>
         </form>
